--- a/static/css/cyPlayer.css
+++ b/static/css/cyPlayer.css
@@ -17,15 +17,28 @@ body {
   position: relative;
   background: linear-gradient(#ace, #f96 80%, #f96 100%) no-repeat;
 }
+body:before{
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: url("../../asset/images/taylor-swift-look-what-you-made-me-do-screenshot-2017-billboard-1548.jpg") no-repeat center/cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  left: 0;
+  filter: blur(5px);
+}
 /*.cyPlayer */
 
 .cyPlayer {
   position: absolute;
-  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
   min-width: 600px;
   margin: auto;
+  margin-top: 30%;
   border-radius: 12px;
   background: rgba(255, 255, 255, .2);
   background: linear-gradient(rgba(255, 255, 255, .2), rgba(255, 255, 255, .3) 75%, rgba(255, 255, 255, .5) 85%, rgba(255, 255, 255, .4));
