--- a/static/css/cyPlayer.css
+++ b/static/css/cyPlayer.css
@@ -28,13 +28,20 @@ body:before {
   display: block;
   width: 100%;
   height: 100%;
-  background: linear-gradient(#ace, #f96 80%, #f96 100%) no-repeat;
+  background: linear-gradient(rgb(9,14,24) 30%, rgb(120,90,90) 85%, #f96 100%) no-repeat;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   left: 0;
   filter: blur(5px);
+}
+#particles-js {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 /*.cyPlayer */
@@ -242,7 +249,7 @@ body:before {
   position: absolute;
   display: none;
   width: 100%;
-  max-height: 21em;
+  max-height: 15em;
   overflow: scroll;
 }
 
@@ -254,6 +261,10 @@ body:before {
   height: 3em;
   line-height: 3em;
   padding: 0 40px;
+  cursor: pointer;
+}
+.cyPlayer .playList li:hover {
+  background: rgba(255, 255, 255, .5);
 }
 
 .cyPlayer .playList li .songName {
