取消播放列表中的图片

--- a/static/css/cyPlayer.css
+++ b/static/css/cyPlayer.css
@@ -275,3 +275,7 @@ body:before {
 .cyPlayer .playList li .singerName {
   font-family: PingFangSC-Thin;
 }
+
+.cyPlayer .playList li .frame {
+  display: none;
+}
